app/base/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
#spec:
#  ingressClassName: nginx
